--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "The jQuery team"
   ],
   "description": "A collection of jQuery plugins that we use for our webapps in Billy's Billing",
-  "main": "index.js",
+  "main": "src/index.js",
   "billyBuilder": {
     "include": "src"
   },
