billyBuilder is now billy-builder in bower.json

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   ],
   "description": "A collection of jQuery plugins that we use for our webapps in Billy's Billing",
   "main": "src/index.js",
-  "billyBuilder": {
+  "billy-builder": {
     "include": "src"
   },
   "license": "MIT",
